// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    52
     
    expenses
     totaling 
    $25,000,000.00
  </h4>
</div>
`;

exports[`should correctly render ExpensesSummary component with single expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totaling 
    $25.00
  </h4>
</div>
`;
